fix: correct hero component to make image right on mobile

--- a/src/utils/hero/hero.scss
+++ b/src/utils/hero/hero.scss
@@ -118,6 +118,7 @@ $blue: #3180fb;
 
     &.left {
       flex-direction: column;
+      background-position: right;
 
       .hero-text {
         text-align: center;
